# langchain_demos

./: .gitignore  README.md  pyproject.toml
1.inicio/: 0.llm.ipynb  1.llm_model.py  2.chat_model.py  3.prompt_template.py  4.chain.py  5.output_parser.py
10.apps_level3_professional/: 01_sec_insights.ipynb  02_fullstack_app_components.ipynb  03_todoapp_fastapi_vercel_fullstack.ipynb  04_deep_dive_sec_insights.ipynb  05_create_llama.ipynb  06_chat_llamaindex.ipynb  07_pdf_app_fastapi_vercel_fullstack.ipynb  08_langchain_plus_todoapp.ipynb  09_langchain_pdf_app.ipynb
2.rag/: 1.rag_basic.py  2.splitters.py  3.splitter_metadata.py  4.embeddings.py  5.vector_store.py  6.retrievers.py  7.rag_with_lcel.py
3.runnables/: 1.simple_chain.ipynb  2.intro_lcel.ipynb  3.runnable_order.ipynb  4.stream_batch.ipynb  5.builtin_runnables.ipynb  6.builtin_funtions_runnables.ipynb  7.combining_lcel.ipynb  8.chains_at_work.ipynb
4.ecosistema_lcel/: 1.langsmith.ipynb  2.langserve.ipynb  3.langchain_templates.ipynb
5.apps_level1/: 01_simple_llm.ipynb  02_simple_chatbot.ipynb  03_advanced_chatbot.ipynb  04_simple_retriever.ipynb  05_simple_agent.ipynb  messages.json
6.temporary_frontend/: 01_redaction_improver.py  02_blogpost_generator.py  03_text_summarize.py  04_text_summarization_master.py  05_extract_json_from_review.py  06_qa_app_master.py
7.llama_index/: 01_basic_concepts.ipynb  02_deep_dive.ipynb
8.api_openai/: 01_basic_concepts.ipynb  02_view_api.ipynb
9.apps_level3_init/: 01_introduction.ipynb  02_llamaindex_with_vercel.ipynb  03_fastapi.ipynb  04_minimal_app_fastapi.ipynb
